apply plugin: 'java'
apply plugin: 'checkstyle'

group = 'com.fishercoder'
version = '1.0-SNAPSHOT'

checkstyle {
    //include ( '**/*.java')
    configFile = file("${rootDir}/fishercoder_checkstyle.xml")
}

description = """"""

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven { url "http://repo.maven.apache.org/maven2" }
}

dependencies {
    compile 'com.google.code.gson:gson:2.8.0'
    testCompile group: 'junit', name: 'junit', version:'4.12'
}
